# chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  experiment.ipynb  pyproject.toml  rag_pipeline.py  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Refactor.yaml  feature.yaml  fix.yaml
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/api/: chat.py  chat_history.py
app/core/: config.py
app/rag/: chat_history_service.py  rag_pipeline.py
app/rag/prompt/: prompt_variants.py
app/services/: chat.py  prompt.py  rag.py
configs/app/: base.yaml  dev.yaml  prod.yaml
docs/: api.yaml
evaluation/: evaluate.ipynb  ingest_corpus.ipynb
evaluation/data/: corpus.jsonl  scenario_a.jsonl  scenario_b.jsonl  scenario_c.jsonl  scenario_d.jsonl  scenario_e.jsonl  scenario_f.jsonl  scenario_g.jsonl  scenario_h.jsonl
evaluation/results/: 20251004_032751.csv  20251004_235105.csv  20251015_162641.csv  20251105_130833.csv  20251105_151506.csv  20251110_203112.csv  20251110_225155.csv  20251112_142015.csv
libs/langchain/prompts/: base.py
scripts/: run.bat  run.ps1  run.sh
src/agent/: _.ipynb  agentic_rag.ipynb  graph.py  nodes.py  prompts.py  state.py  utils.py
src/agent/chroma_db/: chroma.sqlite3
src/api/: chat.py  main.py
src/api/schema/: chat.py
src/chatbot_api/: __init__.py  rag_pipeline.py
src/chatbot_api/routers/: chat_history.py
src/chatbot_api/services/: chat_history_service.py
src/core/: config.py  logger.py
src/prompt_comparison/: prompt_variants.py
src/rag/: chat.py  rag.py
tests/api/: test_api.py  test_main.py
tests/utils/: test_utils.py
(+4 files in other folders)
