[project]
name = "chatbot-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "fastapi[standard]>=0.116.2",
    "httpx>=0.28.1",
    "langchain-chroma>=0.2.6",
    #"langchain-community==0.4.1",
    #"langchain-core>=0.3.76",
    "langchain-huggingface>=0.3.1",
    #"langchain-openai>=0.3.33",
    "langgraph>=0.6.9",
    "loguru>=0.7.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.10",
    "pytest>=8.4.2",
    "ragas>=0.3.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.1",
]
