[project]
name = "chatbot-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "httpx>=0.28.1",
    "langchain==0.0.27",
    "langchain-core==1.0.3",
    "langchain-openai==0.3.34",
    "langchain-huggingface==1.0.1",
    "langchain-text-splitters==1.0.0",
    "langchain-community==0.4.1",
    "langchain-chroma==0.2.6",
    "chromadb==1.1.0",
    "langgraph>=0.6.9",
    "loguru>=0.7.3",
    "pydantic==2.11.9",
    "pydantic-settings>=2.10",
    "pytest>=8.4.2",
    "ragas>=0.3.6",
    "rank-bm25>=0.2.2",
    "sentence-transformers==5.1.1",
]
